# auralia

./: .env.example  .gitignore  PLAN.md  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
apps/api/: package.json
apps/web/: .cta.json  components.json  dev.db  drizzle.config.ts  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: ao3_ingestion.md  implementation-plan.md  m5_plan.md  migrations.md  qwen3_tts_setup.md
docs/guides/: migrations.md  qwen3-tts-setup.md
docs/pipeline/: attribution.md  cast-detection.md  ingestion.md  segmentation.md  synthesis.md  voice-registry.md
docs/plans/: IMPLEMENTATION_PLAN.md  M4_ATTRIBUTION.md  M7_SYNTHESIS.md
docs/reports/: frontend-audit.md
memory/: MEMORY.md  project_doc_structure.md
tests/: conftest.py
tests/attribution/: test_attribution_api.py  test_attribution_storage.py  test_parser.py  test_pre_pass.py  test_prompts.py  test_roster.py  test_service.py  test_validators.py  test_windower.py
tests/cast_detection/: test_cast_detection_api.py  test_harvester.py
tests/ingestion/: test_ao3_adapter.py  test_ao3_ingestion_api.py  test_cleaning.py  test_text_file_ingestion_api.py  test_text_ingestion_api.py
tests/segmentation/: test_ollama_client.py  test_quote_segmenter.py  test_segmentation_api.py
tests/storage/: test_works.py
tests/synthesis/: test_audio.py  test_synthesis_service.py
tests/validators/: test_api_schema_validation.py  test_machine_readable_reports.py  test_run_all_validators.py  test_spans_validators.py
tests/voices/: test_voice_api.py
(+121 files in other folders)
