[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auralia-api"
version = "0.1.0"
description = "Auralia local backend validators and contracts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["apps/api/src"]
